--- a/Iris Flower Detection/requirements.txt
+++ b/Iris Flower Detection/requirements.txt
@@ -104,13 +104,13 @@ seaborn==0.13.2
 setuptools==80.10.1
 shap==0.50.0
 six==1.17.0
-sklearn-compat==1.8.0
+scikit-learn>=1.5
 slicer==0.0.8
 smmap==5.0.2
 SQLAlchemy==2.0.45
 stack-data==0.6.3
 statsmodels==0.14.6
-streamlit==1.53.0
+streamlit>=1.54.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tifffile==2026.1.14
@@ -128,6 +128,7 @@ Werkzeug==3.1.4
 wheel==0.46.2
 widgetsnbextension==4.0.15
 xgboost==3.1.2
+
 
 
 
